# ioringcpp

./: CMakeLists.txt  README.md
examples/: echo_client.cpp  echo_server.cpp  main.cpp
include/ioring/: acceptor.hpp  buffers.hpp  config.hpp  coroutine.hpp  descriptor.hpp  io_uring_enter.hpp  io_uring_setup.hpp  post.hpp  socket_base.hpp  stream_descriptor.hpp  stream_socket.hpp  tcp.hpp  unyield.hpp  uring.hpp  yield.hpp
include/ioring/impl/: io_uring_enter.ipp  io_uring_setup.ipp  uring.ipp
